# Parallel_Transformer

./: .gitignore  CMakeLists.txt  Makefile  README.md  dataset_vectors.txt  timings.csv  transformer
CUDA_transformer/: CUDA_transformer.cu
MPI_transformer/: MPI_transformer  timings.csv  transformer.cpp
baseline/: plot.py  process_seq.py  timings.csv  transformer  transformer.cpp
transformer.dSYM/Contents/Resources/DWARF/: transformer
transformer.dSYM/Contents/Resources/Relocations/aarch64/: transformer.yml
